Fix gradlew permissions in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
+    - name: Set gradlew permissions
+      run: chmod +x android/gradlew
+      
     - name: Build Android APK
       run: |
         cd android
