Fix Java heap space error: Increase memory allocation for Gradle build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    env:
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+      JAVA_OPTS: "-Xmx4096m -XX:MaxPermSize=512m"
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -39,7 +43,7 @@ jobs:
     - name: Build Android APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        ./gradlew assembleRelease --no-daemon --max-workers=2
         cd ..
         
     - name: Upload APK artifact
