--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-haptic-feedback": "^2.1.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-sound": "^0.11.2",
