--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,4 +38,16 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+    
+    // Configure JVM toolchain for all projects
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+    
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
+    }
 } 
