--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,4 +41,9 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true 
+hermesEnabled=true
+
+# JVM Toolchain settings to fix compatibility issues
+org.gradle.java.home=/usr/lib/jvm/zulu-17-jdk-amd64
+android.kotlinVersion=1.8.0
+kotlin.jvm.target.validation.mode=warning 
