Fix Java home path: Remove invalid org.gradle.java.home setting

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,7 +43,6 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# JVM Toolchain settings to fix compatibility issues
-org.gradle.java.home=/usr/lib/jvm/zulu-17-jdk-amd64
+# Kotlin version and JVM target validation settings
 android.kotlinVersion=1.8.0
 kotlin.jvm.target.validation.mode=warning 
