Fix Gradle build error: Remove problematic Kotlin task configuration

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,15 +39,9 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
     
-    // Configure JVM toolchain for all projects
+    // Configure Java compatibility for all projects
     tasks.withType(JavaCompile) {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
-    }
-    
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-        kotlinOptions {
-            jvmTarget = "11"
-        }
     }
 } 
