--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,6 +43,5 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Kotlin version and JVM target validation settings
-android.kotlinVersion=1.8.0
-kotlin.jvm.target.validation.mode=warning 
+# Kotlin version settings
+android.kotlinVersion=1.8.0 
