Fix Gradle build error: Remove problematic Kotlin task configuration from app build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,14 +157,8 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
-// Configure JVM toolchain for all tasks
+// Configure Java compatibility for all tasks
 tasks.withType(JavaCompile) {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
-}
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "11"
-    }
 } 
