Add JVM toolchain settings to force consistent JVM target across all modules

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,4 +44,9 @@ newArchEnabled=false
 hermesEnabled=true
 
 # Kotlin version settings
-android.kotlinVersion=1.8.0 
+android.kotlinVersion=1.8.0
+
+# JVM Toolchain settings to force consistent JVM target
+org.gradle.java.installations.auto-detect=false
+org.gradle.java.installations.paths=/usr/lib/jvm/zulu-17-jdk-amd64
+org.gradle.java.installations.fromEnv=JAVA_HOME 
