Add comprehensive Kotlin JVM toolchain configuration to fix JVM target compatibility

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,4 +44,18 @@ allprojects {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
+    
+    // Configure Kotlin JVM target for all projects
+    plugins.withId('org.jetbrains.kotlin.android') {
+        kotlin {
+            jvmToolchain(11)
+        }
+    }
+    
+    // Alternative Kotlin configuration for older versions
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
+    }
 } 
